--- a/index.html
+++ b/index.html
@@ -139,67 +139,49 @@
     section {
       scroll-margin-top: 120px;
     }
-    /* --- HERO SECTION: No split, no color behind profile image --- */
-    .hero-section {
+
+    /* --- HERO SECTION: Side-by-side, image left, intro right, social under image --- */
+    .hero-row {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      width: 100vw;
+      min-height: 80vh;
+      gap: 0;
+      background: transparent;
+      box-sizing: border-box;
+      padding-top: 4rem;
+      padding-bottom: 4rem;
+    }
+    .hero-left {
+      flex: 1.2;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      width: 100vw;
-      padding-top: 4rem;
-      padding-bottom: 4rem;
       background: transparent;
+      min-width: 340px;
+      max-width: 400px;
+      box-sizing: border-box;
+      margin-left: 2vw;
+      margin-right: 2vw;
     }
     .profile-img {
-      width: 340px;
+      width: 270px;
       max-width: 90vw;
       border-radius: 16px;
       box-shadow: 0 4px 18px rgba(0,0,0,0.18);
       object-fit: cover;
       height: auto;
-      margin-bottom: 2.5rem;
+      margin-bottom: 2.2rem;
       background: transparent;
       display: block;
     }
-    .hero-intro-text {
-      width: 100%;
-      max-width: 800px;
-      background: transparent;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 0 2rem;
-      box-sizing: border-box;
-    }
-    .hero-intro-text h1 {
-      font-size: 3.2rem;
-      color: #fff;
-      font-weight: 700;
-      margin-bottom: 1.6rem;
-      letter-spacing: 1.2px;
-      line-height: 1.2;
-      text-align: center;
-      width: 100%;
-    }
-    .hero-desc {
-      color: #fff;
-      font-size: 1.45rem;
-      margin-bottom: 2rem;
-      line-height: 1.8;
-      width: 100%;
-      text-align: justify;
-      overflow-wrap: break-word;
-      word-break: break-word;
-      box-sizing: border-box;
-      padding-left: 1.5rem;
-      padding-right: 1.5rem;
-      margin: 0 auto;
-      background: transparent;
-    }
     .social-links {
       display: flex;
-      gap: 2.2rem;
-      margin-top: 2.5rem;
+      gap: 1.25rem;
+      margin-top: 0.2rem;
       flex-wrap: wrap;
       justify-content: center;
     }
@@ -207,8 +189,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 65px;
-      height: 65px;
+      width: 48px;
+      height: 48px;
       background: #fff;
       border-radius: 12px;
       box-shadow: 0 2px 10px rgba(30,41,59,0.13);
@@ -217,8 +199,8 @@
       padding: 0;
     }
     .social-links a img {
-      width: 36px;
-      height: 36px;
+      width: 26px;
+      height: 26px;
       object-fit: contain;
       border-radius: 6px;
       transition: transform 0.3s;
@@ -246,42 +228,69 @@
     .social-links a.twitter:hover, .social-links a.twitter:focus { background: #14171a; }
     .social-links a.gmail { border-color: #ea4335; }
     .social-links a.gmail:hover, .social-links a.gmail:focus { background: #ea4335; }
-    /* Responsive */
-    @media (max-width: 900px) {
-      .hero-section {
-        padding-top: 2.5rem;
-        padding-bottom: 2.5rem;
-      }
-      .profile-img {
-        width: 95vw;
-        max-width: 340px;
-      }
-      .hero-intro-text {
-        padding: 0 1rem;
-      }
-      .hero-intro-text h1 {
-        font-size: 2rem;
-      }
-      .hero-desc {
-        font-size: 1.1rem;
-        padding-left: 1rem;
-        padding-right: 1rem;
-      }
+
+    .hero-right {
+      flex: 1.8;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      background: transparent;
+      min-width: 280px;
+      max-width: 540px;
+      width: 90%;
+      padding: 2rem 2.5rem;
+      box-sizing: border-box;
+      margin-left: 2vw;
+      margin-right: 2vw;
     }
-    @media (max-width: 600px) {
-      .hero-section {
-        padding-top: 1rem;
-        padding-bottom: 1rem;
+    .hero-right h1 {
+      font-size: 2.1rem;
+      color: #fff;
+      font-weight: 700;
+      margin-bottom: 1.1rem;
+      letter-spacing: 1.1px;
+      line-height: 1.2;
+      text-align: left;
+      width: 100%;
+    }
+    .hero-desc {
+      color: #fff;
+      font-size: 1.09rem;
+      margin-bottom: 1.2rem;
+      line-height: 1.65;
+      width: 100%;
+      text-align: justify;
+      overflow-wrap: break-word;
+      word-break: break-word;
+      box-sizing: border-box;
+      padding-left: 0.5rem;
+      padding-right: 0.5rem;
+      margin: 0 auto;
+      background: transparent;
+    }
+    @media (max-width: 950px) {
+      .hero-row {
+        flex-direction: column;
+        align-items: center;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
       }
-      .profile-img {
-        width: 98vw;
-        max-width: 95vw;
+      .hero-left, .hero-right {
+        margin-left: 0;
+        margin-right: 0;
+        max-width: 100vw;
       }
-      .hero-intro-text {
-        padding: 0 0.5rem;
+      .hero-left {
+        margin-bottom: 2.5rem;
       }
-      .hero-intro-text h1 {
-        font-size: 1.3rem;
+      .hero-right {
+        padding: 1.5rem 1rem;
+        align-items: center;
+      }
+      .hero-right h1 {
+        text-align: center;
+        font-size: 1.35rem;
       }
       .hero-desc {
         font-size: 1rem;
@@ -289,6 +298,36 @@
         padding-right: 0.5rem;
       }
     }
+    @media (max-width: 600px) {
+      .profile-img {
+        width: 90vw;
+        max-width: 95vw;
+      }
+      .hero-row {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+      }
+      .hero-right {
+        padding: 1rem 0.3rem;
+      }
+      .hero-right h1 {
+        font-size: 1.07rem;
+      }
+      .hero-desc {
+        font-size: 0.95rem;
+        padding-left: 0.1rem;
+        padding-right: 0.1rem;
+      }
+      .social-links a {
+        width: 38px;
+        height: 38px;
+      }
+      .social-links a img {
+        width: 17px;
+        height: 17px;
+      }
+    }
+    /* --- Rest of your site styles ... --- */
     .education-section,
     .research-section,
     .get-in-touch {
@@ -473,27 +512,10 @@
       <li><a href="#get-in-touch">Get in Touch</a></li>
     </ul>
   </nav>
-  <!-- Hero Section: NO split, NO background color behind image -->
-  <section class="hero-section" id="home">
-    <img src="your-profile-picture.jpg" alt="Profile picture" class="profile-img" />
-    <div class="hero-intro-text">
-      <h1>Welcome to my personal website!</h1>
-      <div class="hero-desc">
-        I'm Arupam Biswas, a passionate neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
-        <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
-          Institute of Developmental Biology and Neurobiology (iDN)
-        </a>. My work focuses on developing biomaterials for neural regeneration, in collaboration with the
-        <a href="https://lir-mainz.de/en/lir" target="_blank">
-          Leibniz Institute for Resilience Research (LIR)
-        </a> and the
-        <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
-          Max Planck Institute for Polymer Research (MPI-P)
-        </a>, Germany.
-        <br><br>
-        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to driving innovation in science and beyond.
-        <br><br>
-        If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
-      </div>
+  <!-- Hero Section: side-by-side for desktop, stacked for mobile -->
+  <section class="hero-row" id="home">
+    <div class="hero-left">
+      <img src="your-profile-picture.jpg" alt="Profile picture" class="profile-img" />
       <div class="social-links">
         <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank" class="facebook" aria-label="Facebook">
           <img src="facebookff.jpg" alt="Facebook Logo">
@@ -510,6 +532,25 @@
         <a href="mailto:arupambiswas007@gmail.com" target="_blank" class="gmail" aria-label="Gmail">
           <img src="gmail.jpg" alt="Gmail Logo">
         </a>
+      </div>
+    </div>
+    <div class="hero-right">
+      <h1>Welcome to my personal website!</h1>
+      <div class="hero-desc">
+        I'm Arupam Biswas, a passionate neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
+        <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
+          Institute of Developmental Biology and Neurobiology (iDN)
+        </a>. My work focuses on developing biomaterials for neural regeneration, in collaboration with the
+        <a href="https://lir-mainz.de/en/lir" target="_blank">
+          Leibniz Institute for Resilience Research (LIR)
+        </a> and the
+        <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
+          Max Planck Institute for Polymer Research (MPI-P)
+        </a>, Germany.
+        <br><br>
+        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to driving innovation in science and beyond.
+        <br><br>
+        If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
       </div>
     </div>
   </section>
