--- a/index.html
+++ b/index.html
@@ -102,12 +102,11 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: flex-start; /* Keep left aligned */
+      align-items: flex-start;
       background: rgba(15,23,42,0.94);
       padding: 4rem 3rem;
       min-width: 320px;
       width: 100%;
-      text-align: left; /* Make intro text left sided */
     }
     .hero-text-side h1 {
       font-size: 2.1rem;
@@ -116,8 +115,6 @@
       margin-bottom: 0.8rem;
       letter-spacing: 1px;
       line-height: 1.2;
-      text-align: left;
-      width: 100%;
     }
     .hero-desc {
       color: #fff;
@@ -125,7 +122,7 @@
       margin-bottom: 2.2rem;
       line-height: 1.7;
       max-width: 640px;
-      text-align: left; /* Left align intro text */
+      text-align: justify;
     }
     .hero-desc a {
       color: #38bdf8;
@@ -271,41 +268,33 @@
     .carousel-track {
       display: flex;
       transition: transform 0.5s cubic-bezier(.73,.31,.36,.93);
-      width: 100%;
     }
     .carousel-item {
       flex: 0 0 100%;
       max-width: 100%;
       padding: 1rem 0.3rem;
+      text-align: center;
       box-sizing: border-box;
       font-size: 1rem;
       display: flex;
-      flex-direction: row; /* Make items in a row for desktop */
-      align-items: flex-start;
-      justify-content: center;
-      gap: 2.5rem;
+      flex-direction: column;
+      align-items: center;
     }
     .carousel-item img {
-      width: 45vw;
-      max-width: 600px;
-      min-width: 280px;
+      /* Enlarged image for project 1 and 2 */
+      width: 90vw;
+      max-width: 720px;
+      min-width: 320px;
       height: auto;
       border-radius: 12px;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.16);
-      margin: 0 0 1.2rem 0;
+      margin: 0 auto 1.2rem;
       display: block;
-      flex-shrink: 0;
     }
     .carousel-item .item-info {
-      text-align: left;
+      text-align: justify;
       padding: 0 0.3rem;
-      max-width: 700px;
-      min-width: 280px;
-      align-self: flex-start;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      font-size: 1.13rem;
+      max-width: 900px;
     }
     .carousel-item h3 {
       font-size: 1.19rem;
@@ -403,25 +392,12 @@
         font-size: 1.35rem;
         max-width: 900px;
       }
+      /* Even larger education cards on desktop */
       .card {
         font-size: 1.25rem;
         max-width: 750px;
         min-width: 380px;
         padding: 2.3rem 3rem;
-      }
-      .carousel-item {
-        flex-direction: row;
-        gap: 3.5rem;
-        align-items: flex-start;
-      }
-      .carousel-item .item-info {
-        max-width: 900px;
-        font-size: 1.18rem;
-      }
-      .carousel-item img {
-        width: 50vw;
-        max-width: 750px;
-        min-width: 320px;
       }
     }
     /* Responsive Design */
@@ -454,23 +430,9 @@
       .hero-desc {
         font-size: 1rem;
         max-width: 640px;
-        text-align: center;
-      }
-      .carousel-item {
-        flex-direction: column;
-        gap: 0;
-        align-items: center;
       }
       .carousel-item img {
         max-width: 95vw;
-        width: 95vw;
-        min-width: 0;
-      }
-      .carousel-item .item-info {
-        max-width: 95vw;
-        min-width: 0;
-        text-align: center;
-        font-size: 1.08rem;
       }
       .card {
         max-width: 99vw;
@@ -648,7 +610,13 @@
             </p>
           </div>
         </div>
-        <!-- Project 3 removed as per user request -->
+        <div class="carousel-item">
+          <img src="project3.jpg" alt="Project 3">
+          <div class="item-info">
+            <h3>Project Title 3</h3>
+            <p>A quick summary of the research and its significance.</p>
+          </div>
+        </div>
       </div>
       <button class="carousel-button prev">‹</button>
       <button class="carousel-button next">›</button>
