--- a/index.html
+++ b/index.html
@@ -62,6 +62,103 @@
       outline: none;
     }
 
+    /* Hamburger styles (hidden on desktop, shown on mobile) */
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      width: 38px;
+      height: 38px;
+      cursor: pointer;
+      border: none;
+      background: transparent;
+      padding: 0;
+      z-index: 101;
+    }
+    .hamburger:focus {
+      outline: 2px solid #38bdf8;
+    }
+    .hamburger-bar {
+      width: 28px;
+      height: 3.6px;
+      background: #38bdf8;
+      margin: 4px 0;
+      border-radius: 2px;
+      transition: all 0.3s;
+    }
+    .nav-links-mobile {
+      display: none;
+      flex-direction: column;
+      position: fixed;
+      top: 55px; /* nav height, adjust as needed */
+      right: 16px;
+      background: #1e293b;
+      border-radius: 10px;
+      box-shadow: 0 8px 24px rgba(30,41,59,0.21);
+      z-index: 100;
+      min-width: 165px;
+      padding: 1.1rem 0.6rem 1rem 0.6rem;
+      animation: slideDown 0.23s cubic-bezier(.56,.12,.36,.83);
+    }
+    @keyframes slideDown {
+      from { opacity: 0; transform: translateY(-18px);}
+      to { opacity: 1; transform: translateY(0);}
+    }
+    .nav-links-mobile li {
+      margin: 0.7rem 0;
+      font-size: 1.12rem;
+      text-align: right;
+    }
+    .nav-links-mobile li a {
+      color: #f8fafc;
+      padding: 0.4rem 0.7rem;
+      border-radius: 6px;
+      text-decoration: none;
+      display: block;
+      background: none;
+      transition: background 0.2s, color 0.2s;
+    }
+    .nav-links-mobile li a:hover, .nav-links-mobile li a:focus {
+      background: #38bdf8;
+      color: #0f172a;
+      outline: none;
+    }
+
+    /* Hide desktop nav on mobile, show hamburger */
+    @media (max-width: 780px) {
+      nav ul {
+        display: none;
+      }
+      .hamburger {
+        display: flex;
+      }
+      .nav-links-mobile {
+        display: flex;
+      }
+    }
+    /* Hide mobile menu on desktop */
+    @media (min-width: 781px) {
+      .nav-links-mobile {
+        display: none !important;
+      }
+    }
+    /* Overlay when menu open */
+    .nav-overlay {
+      display: none;
+    }
+    .nav-overlay.active {
+      display: block;
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(15,23,42,0.43);
+      z-index: 99;
+      animation: fadeInOverlay 0.2s;
+    }
+    @keyframes fadeInOverlay {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
     .hero-split {
       display: flex;
       min-height: 90vh;
@@ -281,7 +378,6 @@
       align-items: center;
     }
     .carousel-item img {
-      /* Enlarged image for project 1 and 2 */
       width: 90vw;
       max-width: 720px;
       min-width: 320px;
@@ -392,7 +488,6 @@
         font-size: 1.35rem;
         max-width: 900px;
       }
-      /* Even larger education cards on desktop */
       .card {
         font-size: 1.25rem;
         max-width: 750px;
@@ -492,6 +587,18 @@
       <li><a href="#research">Research</a></li>
       <li><a href="#get-in-touch">Get in Touch</a></li>
     </ul>
+    <button class="hamburger" aria-label="Open navigation menu" aria-controls="navMobileMenu" aria-expanded="false">
+      <span class="hamburger-bar"></span>
+      <span class="hamburger-bar"></span>
+      <span class="hamburger-bar"></span>
+    </button>
+    <!-- Mobile nav menu (initially hidden) -->
+    <ul class="nav-links-mobile" id="navMobileMenu" role="menu" aria-label="Mobile navigation menu" tabindex="-1" style="display:none;">
+      <li><a href="#education" role="menuitem" tabindex="0">Education</a></li>
+      <li><a href="#research" role="menuitem" tabindex="0">Research</a></li>
+      <li><a href="#get-in-touch" role="menuitem" tabindex="0">Get in Touch</a></li>
+    </ul>
+    <div class="nav-overlay"></div>
   </nav>
   <!-- Hero Split Section -->
   <section class="hero-split" id="home">
@@ -647,29 +754,64 @@
     © 2025 Arupam Biswas. All rights reserved.
   </footer>
   <script>
+    // Hamburger menu functionality
+    const hamburgerBtn = document.querySelector('.hamburger');
+    const mobileNav = document.querySelector('.nav-links-mobile');
+    const navOverlay = document.querySelector('.nav-overlay');
+
+    function openMobileMenu() {
+      mobileNav.style.display = 'flex';
+      hamburgerBtn.setAttribute('aria-expanded', 'true');
+      navOverlay.classList.add('active');
+      // Focus first link for accessibility
+      const firstLink = mobileNav.querySelector('a');
+      if(firstLink) firstLink.focus();
+      document.body.style.overflow = 'hidden'; // Prevent background scroll
+    }
+    function closeMobileMenu() {
+      mobileNav.style.display = 'none';
+      hamburgerBtn.setAttribute('aria-expanded', 'false');
+      navOverlay.classList.remove('active');
+      document.body.style.overflow = '';
+    }
+    hamburgerBtn.addEventListener('click', (e) => {
+      if (mobileNav.style.display === 'flex') {
+        closeMobileMenu();
+      } else {
+        openMobileMenu();
+      }
+    });
+    navOverlay.addEventListener('click', closeMobileMenu);
+    // Close menu on ESC
+    document.addEventListener('keydown', function(e) {
+      if(e.key === 'Escape' && mobileNav.style.display === 'flex') {
+        closeMobileMenu();
+        hamburgerBtn.focus();
+      }
+    });
+    // Close menu after clicking a link
+    Array.from(mobileNav.querySelectorAll('a')).forEach(link => {
+      link.addEventListener('click', closeMobileMenu);
+    });
+
     // Carousel Functionality
     const track = document.querySelector('.carousel-track');
     const items = Array.from(track.children);
     const prevButton = document.querySelector('.carousel-button.prev');
     const nextButton = document.querySelector('.carousel-button.next');
-
     let currentIndex = 0;
-
     function updateCarousel() {
       const itemWidth = items[0].getBoundingClientRect().width;
       track.style.transform = `translateX(-${currentIndex * itemWidth}px)`;
     }
-
     prevButton.addEventListener('click', () => {
       currentIndex = (currentIndex > 0) ? currentIndex - 1 : items.length - 1;
       updateCarousel();
     });
-
     nextButton.addEventListener('click', () => {
       currentIndex = (currentIndex < items.length - 1) ? currentIndex + 1 : 0;
       updateCarousel();
     });
-
     window.addEventListener('resize', updateCarousel);
     updateCarousel();
   </script>
