--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       display: none;
       flex-direction: column;
       position: fixed;
-      top: 55px; /* nav height, adjust as needed */
+      top: 55px;
       right: 16px;
       background: #1e293b;
       border-radius: 10px;
@@ -118,7 +118,7 @@
       background: none;
       transition: background 0.2s, color 0.2s;
     }
-    .nav-links-mobile li a:hover, .nav-links-mobile li a:focus {
+    .nav-links-mobile li a:hover, .nav-links-mobile li a:focus, .nav-links-mobile li a.active {
       background: #38bdf8;
       color: #0f172a;
       outline: none;
@@ -136,13 +136,11 @@
         display: flex;
       }
     }
-    /* Hide mobile menu on desktop */
     @media (min-width: 781px) {
       .nav-links-mobile {
         display: none !important;
       }
     }
-    /* Overlay when menu open */
     .nav-overlay {
       display: none;
     }
@@ -159,6 +157,7 @@
       to { opacity: 1; }
     }
 
+    /* MAIN LAYOUT */
     .hero-split {
       display: flex;
       min-height: 90vh;
@@ -166,7 +165,7 @@
     }
     .hero-img-side {
       flex: 2;
-      background: url('your-profile-picture.jpg') center center/95% no-repeat;
+      background: none;
       min-height: 700px;
       transition: background-size 0.3s, background-position 0.3s;
       position: relative;
@@ -175,24 +174,30 @@
       align-items: center;
       justify-content: flex-end;
     }
-    /* Social links under profile picture */
+    .profile-pic {
+      display: block;
+      width: 80%;
+      max-width: 350px;
+      margin-top: 2.7rem;
+      margin-bottom: 1.7rem;
+      border-radius: 14px;
+      box-shadow: 0 4px 20px rgba(18,19,32,0.13);
+      object-fit: cover;
+    }
     .social-links.hero-social {
-      position: absolute;
-      bottom: 40px;
-      left: 0;
-      right: 0;
-      margin: 0 auto;
+      position: static;
+      margin-top: 0.3rem;
+      margin-bottom: 2rem;
+      background: rgba(16,22,41,0.14);
       display: flex;
       justify-content: center;
       gap: 1.2rem;
       z-index: 5;
-      background: rgba(16,22,41,0.2);
       padding: 0.7rem 0.5rem;
       border-radius: 14px;
       width: fit-content;
       box-shadow: 0 2px 8px rgba(16,22,41,0.09);
     }
-    /* Hide original social-links in text side */
     .hero-text-side .social-links { display: none !important; }
     .hero-text-side {
       flex: 3;
@@ -457,7 +462,7 @@
       background-color: #1e293b;
     }
 
-    /* Desktop: Increase font sizes for every section */
+    /* Desktop font sizes */
     @media (min-width: 1025px) {
       body, nav, .hero-desc, .card, .carousel-item, .get-in-touch, .get-in-touch p, .get-in-touch h2 {
         font-size: 1.25rem;
@@ -494,30 +499,63 @@
         min-width: 380px;
         padding: 2.3rem 3rem;
       }
+      .hero-img-side {
+        min-width: 340px;
+        max-width: 500px;
+        flex-basis: 45%;
+        justify-content: flex-end;
+      }
+      .hero-split {
+        align-items: stretch;
+      }
+      .profile-pic {
+        width: 85%;
+        max-width: 410px;
+        margin-top: 3.5rem;
+        margin-bottom: 2.2rem;
+      }
+      .social-links.hero-social {
+        margin-bottom: 2.7rem;
+        margin-top: 0.5rem;
+      }
+      .hero-text-side {
+        align-items: flex-start;
+        padding: 4rem 4vw;
+        min-width: 340px;
+        max-width: 900px;
+      }
     }
-    /* Responsive Design */
+
+    /* Mobile layout improvements */
     @media (max-width: 1024px) {
       .hero-split {
         flex-direction: column;
         min-height: unset;
       }
       .hero-img-side {
-        background-size: contain !important;
-        background-repeat: no-repeat !important;
-        background-position: center top !important;
         min-height: 220px;
-        height: 220px;
+        height: auto;
         width: 100vw;
         position: relative;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
+        flex-basis: unset;
+        max-width: 100vw;
+      }
+      .profile-pic {
+        width: 90vw;
+        max-width: 350px;
+        margin-top: 1.1rem;
+        margin-bottom: 0.9rem;
+      }
+      .social-links.hero-social {
+        margin-top: 1.2rem;
+        margin-bottom: 0.5rem;
       }
       .hero-text-side {
         align-items: center;
-        padding: 2.7rem 1rem 2rem 1rem;
+        padding: 2.7rem 7vw 2rem 7vw;
         text-align: center;
         min-width: unset;
+        max-width: 100vw;
       }
       .hero-text-side h1, .get-in-touch h2, .education-section h2, .research-section h2 {
         font-size: 1.37rem;
@@ -535,24 +573,20 @@
         font-size: 1.01rem;
         padding: 1.5rem 1rem;
       }
-      .social-links.hero-social {
-        bottom: 10px;
-        padding: 0.5rem 0.3rem;
+      .get-in-touch, .education-section, .research-section {
+        padding-left: 7vw !important;
+        padding-right: 7vw !important;
       }
     }
     @media (max-width: 600px) {
-      .hero-img-side {
-        min-height: 180px;
-        height: 180px;
-      }
-      nav ul {
-        gap: 0.7rem;
-      }
-      nav h1 {
-        font-size: 1rem;
+      .profile-pic {
+        margin-top: 0.7rem;
+        margin-bottom: 0.7rem;
+        width: 98vw;
+        max-width: 98vw;
       }
       .hero-text-side {
-        padding: 1.25rem 0.2rem 1rem 0.2rem;
+        padding: 1.25rem 4vw 1rem 4vw;
       }
       .hero-text-side h1 {
         font-size: 1.08rem;
@@ -603,6 +637,7 @@
   <!-- Hero Split Section -->
   <section class="hero-split" id="home">
     <div class="hero-img-side">
+      <img src="your-profile-picture.jpg" alt="Profile Picture" class="profile-pic" />
       <div class="social-links hero-social">
         <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank" class="facebook">
           <img src="facebookff.jpg" alt="Facebook Logo">
@@ -641,7 +676,6 @@
         <br><br>
         If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
       </div>
-      <!-- Social links moved to profile pic side; hidden here -->
     </div>
   </section>
   <!-- Education Section -->
@@ -766,7 +800,7 @@
       // Focus first link for accessibility
       const firstLink = mobileNav.querySelector('a');
       if(firstLink) firstLink.focus();
-      document.body.style.overflow = 'hidden'; // Prevent background scroll
+      document.body.style.overflow = 'hidden';
     }
     function closeMobileMenu() {
       mobileNav.style.display = 'none';
@@ -782,17 +816,35 @@
       }
     });
     navOverlay.addEventListener('click', closeMobileMenu);
-    // Close menu on ESC
     document.addEventListener('keydown', function(e) {
       if(e.key === 'Escape' && mobileNav.style.display === 'flex') {
         closeMobileMenu();
         hamburgerBtn.focus();
       }
     });
-    // Close menu after clicking a link
     Array.from(mobileNav.querySelectorAll('a')).forEach(link => {
       link.addEventListener('click', closeMobileMenu);
     });
+
+    // Mobile nav highlight (active) logic
+    function setActiveMobileNav() {
+      const links = mobileNav.querySelectorAll('a');
+      links.forEach(link => link.classList.remove('active'));
+      let hash = location.hash;
+      if (!hash) return;
+      links.forEach(link => {
+        if (link.getAttribute('href') === hash) {
+          link.classList.add('active');
+        }
+      });
+    }
+    mobileNav.querySelectorAll('a').forEach(link => {
+      link.addEventListener('click', function() {
+        setTimeout(setActiveMobileNav, 10);
+      });
+    });
+    window.addEventListener('hashchange', setActiveMobileNav);
+    setActiveMobileNav();
 
     // Carousel Functionality
     const track = document.querySelector('.carousel-track');
